# Keencloo-Cinema

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: BaseDesignWindow.h  ExploreFilesList.h  ExtractVideoMetaData.h  Keencloo.h  MediaPlayer.h  SettingsWindow.h  VideoPlayer.h  common.h
rsc/: logo_full.psd  logo_minimal.psd
src/: BaseDesignWindow.cpp  ExploreFilesList.cpp  ExtractVideoMetaData.cpp  MediaPlayer.cpp  SettingsWindow.cpp  VideoPlayer.cpp  main.cpp
styles/: style.qss
unit_tests/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
